--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,24 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/cma?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.name=cma
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.validationQuery=SELECT 1
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
-server.port=8083
+server.port=8082
+
+# JWT
+jwt.header=Authorization
+jwt.secret=mySecret
+jwt.expiration=604800
+
+size.max.page=5
+
+#flyway.locations=classpath:/db/migration/migrations
