--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <commons-lang-version>3.1</commons-lang-version>
         <jackson-datatype-version>2.8.4</jackson-datatype-version>
         <flyway-version>3.0</flyway-version>
+        <h2-version>1.4.194</h2-version>
         <start-class>com.contribuidor.cma.RxApplication</start-class>
        </properties>
 
@@ -80,10 +81,15 @@
             <version>${shiro.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${h2.version}</version>
+        </dependency>
+      <!--  <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
